Major update: Added API server, comprehensive testing, and new features
New files:
- API server implementation (api/, run_api.py)
- API documentation (API_DOCUMENTATION.md, SERVER_API_COMPLETION_REPORT.md)
- Enhanced Telegram bot with API integration
- Comprehensive test suite (42+ tests)
- Dataset combination utilities
- Kiro specifications

Updated:
- requirements.txt with new dependencies
- Telegram bot configuration
- Model backup weights

Removed:
- Temporary test files

Features:
- Complete REST API for model training/inference
- Database integration for models/datasets
- Authentication and logging systems
- Property-based testing
- Unit and integration tests

--- a/telegram_bot/.env.example
+++ b/telegram_bot/.env.example
@@ -6,3 +6,7 @@ ADMIN_ID=843366380
 
 # Timezone
 TIMEZONE=Europe/Moscow
+
+# Server Management API Configuration
+API_URL=http://localhost:8000
+API_KEY=your_api_key_here
