--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,16 @@ python-docx>=0.8.11
 hypothesis>=6.0.0
 pytest>=7.0.0
 tqdm>=4.65.0
+
+# API Server Dependencies
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+python-multipart>=0.0.6
+
+# System Monitoring
+psutil>=5.9.0
+pynvml>=11.5.0
+
+# Testing
+pytest-asyncio>=0.21.0
